--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.xml</groupId>
   <artifactId>my-maven-test-project</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>ass_1</name>
+  <name>ass</name>
   
   
    <dependencies>
